# donut

./: .gitignore  .gitmodules  CLA.txt  CMakeLists.txt  README.md  compileshaders.cmake  donut-app.cmake  donut-engine.cmake  donut-render.cmake
.github/workflows/: cla.yml
cmake/: FetchAgilitySDK.cmake  FindStreamline.cmake
include/donut/app/: AftermathCrashDump.h  ApplicationBase.h  Camera.h  DeviceManager.h  DeviceManager_DX11.h  DeviceManager_DX12.h  DeviceManager_VK.h  MediaFileSystem.h  StreamlineInterface.h  UserInterfaceUtils.h  imgui_console.h  imgui_nvrhi.h  imgui_renderer.h
include/donut/core/: log.h  string_utils.h
include/donut/core/math/: matrix.h  quat.h  vector.h
include/donut/core/vfs/: VFS.h
include/donut/engine/: CommonRenderPasses.h  ConsoleInterpreter.h  ConsoleObjects.h  DescriptorTableManager.h  FramebufferFactory.h  KeyframeAnimation.h  MaterialBindingCache.h  Scene.h  SceneGraph.h  SceneTypes.h  ShaderFactory.h  ShadowMap.h  TextureCache.h  View.h
include/donut/render/: DepthPass.h  ForwardShadingPass.h  GBufferFillPass.h  TemporalAntiAliasingPass.h
include/donut/shaders/: binding_helpers.hlsli  bindless.h  brdf.hlsli  depth_cb.h  forward_cb.h  forward_vertex.hlsli  gbuffer.hlsli  gbuffer_cb.h  hash_based_rng.hlsli  light_probe_cb.h  lighting.hlsli  material_bindings.hlsli  material_cb.h  motion_vectors.hlsli  packing.hlsli  scene_material.hlsli  shadows.hlsli  sky.hlsli  ssao_cb.h  surface.hlsli  taa_cb.h  utils.hlsli  view_cb.h  vulkan.hlsli
shaders/: CMakeLists.txt  DonutShaders.cfg  imgui_vertex.hlsl  rect_vs.hlsl  skinning_cs.hlsl
shaders/passes/: depth_ps.hlsl  depth_vs.hlsl  forward_ps.hlsl  forward_vs.hlsl  gbuffer_ps.hlsl  gbuffer_vs.hlsl  joints.hlsl  light_probe.hlsl  material_id_ps.hlsl  mipmapgen_cs.hlsl  motion_vectors_ps.hlsl  ssao_compute_cs.hlsl  taa_cs.hlsl
src/app/: ApplicationBase.cpp  Camera.cpp  DeviceManager.cpp  UserInterfaceUtils.cpp  imgui_console.cpp  imgui_nvrhi.cpp  imgui_renderer.cpp
src/app/aftermath/: AftermathCrashDump.cpp
src/app/dx11/: DeviceManager_DX11.cpp
src/app/dx12/: DeviceManager_DX12.cpp
src/app/streamline/: StreamlineIntegration.cpp  StreamlineIntegration.h
src/app/vulkan/: DeviceManager_VK.cpp
src/core/: log.cpp  string_utils.cpp
src/core/chunk/: chunkWriter.cpp
src/core/vfs/: TarFile.cpp  VFS.cpp
src/engine/: AudioEngine.cpp  CommonRenderPasses.cpp  ConsoleInterpreter.cpp  ConsoleObjects.cpp  DDSFile.cpp  DescriptorTableManager.cpp  GltfImporter.cpp  IesProfile.cpp  KeyframeAnimation.cpp  Material.cpp  MaterialBindingCache.cpp  Scene.cpp  SceneGraph.cpp  ShaderFactory.cpp  TextureCache.cpp  View.cpp
src/render/: BloomPass.cpp  CascadedShadowMap.cpp  DeferredLightingPass.cpp  DepthPass.cpp  EnvironmentMapPass.cpp  ForwardShadingPass.cpp  GBuffer.cpp  GBufferFillPass.cpp  JointsRenderPass.cpp  LightProbeProcessingPass.cpp  MipMapGenPass.cpp  PixelReadbackPass.cpp  SkyPass.cpp  SsaoPass.cpp  TemporalAntiAliasingPass.cpp  ToneMappingPasses.cpp
tests/src/core/: test_circular_buffer.cpp  test_vfs.cpp
tests/src/engine/: test_console_objects.cpp
